--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
 </head>
 
 <body>
+    <style>
+    img{
+        max-width: 100%;
+    } 
+    .item{
+        margin: 15px 0;
+        text-align: center;
+    }
+    </style>
 
     <nav class="navbar">
         <div class="container">
