--- a/index.html
+++ b/index.html
@@ -13,10 +13,30 @@
     img{
         max-width: 100%;
     } 
+    .poster{
+        height: 360px;
+    }
     .item{
         margin: 15px 0;
         text-align: center;
     }
+    .spinner{
+        margin: 0 auto;
+        width: 100px;
+        height: 100px;
+        border: 10px solid;
+        border-radius: 50%;
+        border-left-color: transparent;
+        border-top-color: #aaa;
+        border-right-color: #555;
+        border-bottom-color: #000;
+        animation: spin 500ms infinite linear;
+    }
+    @keyframes spin{
+        100%{
+            transform: rotate(360deg);
+        }
+     }
     </style>
 
     <nav class="navbar">
